--- a/public/css/magnific-popup.css
+++ b/public/css/magnific-popup.css
@@ -352,7 +352,7 @@ img.mfp-img {
     text-align: center;
     padding: 0; } }
 
-@media all and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .mfp-arrow {
     -webkit-transform: scale(0.75);
     transform: scale(0.75); }
